--- a/index.html
+++ b/index.html
@@ -474,6 +474,8 @@
                 <h1 class="font-esthetic my-4" style="font-size: 2.5rem;">Farhan & Bella</h1>
                 <div id="nama-tamu"></div>
 
+                <div class="m-2"><p class="mt-0 mb-1 mx-0 p-0 text-light">Kepada Yth Bapak/Ibu/Saudara/i</p><h2 class="text-light">Teman teman semua</h2></div>
+
                 <button type="button" class="btn btn-light shadow rounded-4 mt-4" onclick="util.buka(this)">
                     <i class="fa-solid fa-envelope-open me-2"></i>Buka Undangan
                 </button>
